--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
+    "deploy": "gh-pages -d dist",
     "test": "vitest --run --environment jsdom --reporter default"
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "typescript": "5.9.3",
   "vite": "5.3.6",
   "@vitejs/plugin-react": "4.2.0",
+    "gh-pages": "5.0.0",
     "vitest": "1.6.1",
     "jsdom": "22.1.0"
   }
